<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/shadow_medium_rounded"
    android:minHeight="250dp">

    <ImageView
        android:id="@+id/img_profile_pic"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.120000005"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark_pressed" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:hint="@string/edit_first_name"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_pic"
        app:layout_constraintLeft_toRightOf="@+id/img_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/img_profile_pic"
        app:layout_constraintVertical_bias="0.19999999" />


    <TextView
        android:id="@+id/tv_country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/edit_country"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:hint="@string/edit_city"
        android:padding="2dp"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/tv_country"
        app:layout_constraintTop_toBottomOf="@+id/tv_country" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/edit_description"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="@+id/img_profile_pic"
        app:layout_constraintTop_toBottomOf="@+id/img_profile_pic" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="4dp"
        android:hint="@string/edit_description_hint"
        android:minHeight="40dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/img_profile_pic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
        app:layout_constraintTop_toRightOf="parent" />

    <ImageView
        android:id="@+id/img_edit_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit_black_24dp"
        android:layout_marginRight="8dp" />


    <EditText
        android:id="@+id/et_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="24dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:background="@drawable/edit_box_rounded"
        android:ems="6"
        android:hint="@string/edit_first_name"
        android:inputType="textCapWords|textPersonName"
        android:padding="2dp"
        android:scrollHorizontally="true"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/img_profile_pic"
        app:layout_constraintLeft_toRightOf="@+id/img_profile_pic"
        app:layout_constraintTop_toTopOf="@+id/img_profile_pic"
        app:layout_constraintVertical_bias="0.19999999" />

    <EditText
        android:id="@+id/et_country"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="16dp"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:background="@drawable/edit_box_rounded"
        android:ems="6"
        android:hint="@string/edit_country"
        android:inputType="textPersonName"
        android:padding="2dp"
        android:scrollHorizontally="true"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/tv_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <EditText
        android:id="@+id/et_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_box_rounded"
        android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
        android:ems="6"
        android:hint="@string/edit_city"
        android:inputType="textPersonName"
        android:padding="2dp"
        android:scrollHorizontally="true"
        android:textSize="16sp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="@+id/et_country"
        app:layout_constraintTop_toBottomOf="@+id/et_country" />

    <EditText
        android:id="@+id/et_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="24dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/edit_box_rounded"
        android:ems="6"
        android:hint="@string/edit_description_hint"
        android:inputType="textMultiLine"
        android:minHeight="40dp"
        android:padding="2dp"
        android:scrollHorizontally="false"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/textView9"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
</android.support.constraint.ConstraintLayout>